--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "excel": "^0.1.4",
+    "lodash": "^3.10.1",
     "node-xlsx": "^0.6.0"
   }
 }
