--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Casper Lai",
   "license": "MIT",
   "dependencies": {
+    "JSON2": "^0.1.0",
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "excel": "^0.1.4",
