--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "excel": "^0.1.4",
+    "fs": "0.0.2",
+    "immutable": "^3.7.4",
     "lodash": "^3.10.1",
     "node-xlsx": "^0.6.0"
   }
