--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "icd-10-cm-parser",
   "version": "0.1.0",
   "description": "Parse icd 10 cm excel to json.",
-  "main": "index.js",
+  "main": "dist/icd.json",
   "scripts": {
     "start": "./node_modules/.bin/babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
