--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "0.0.2",
     "immutable": "^3.7.4",
     "lodash": "^3.10.1",
-    "node-xlsx": "^0.6.0"
+    "node-xlsx": "^0.6.0",
+    "path": "^0.12.7"
   }
 }
