--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "icd-10-cm-parser",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Parse icd 10 cm excel to json.",
-  "main": "dist/icd.json",
+  "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
