--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "icd-10-cm-parser",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Parse icd 10 cm excel to json.",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/babel-node index.js",
+    "start": "./node_modules/.bin/babel-node index.js --stage 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
